--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile ("org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion")
     compile ("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
     compile ("org.springframework.boot:spring-boot-starter-thymeleaf:$springBootVersion")
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     compile group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.4.1'
 
     
